@@ -3,10 +3,14 @@ package com.sidpatchy.clairebot.Listener;
 import com.sidpatchy.clairebot.Embed.Commands.Regular.SantaEmbed;
 import com.sidpatchy.clairebot.Embed.Commands.Regular.UserPreferencesEmbed;
 import com.sidpatchy.clairebot.Embed.Commands.Regular.VotingEmbed;
+import com.sidpatchy.clairebot.Embed.ErrorEmbed;
+import com.sidpatchy.clairebot.Lang.ContextManager;
+import com.sidpatchy.clairebot.Lang.LanguageManager;
 import com.sidpatchy.clairebot.Main;
 import com.sidpatchy.clairebot.Util.ChannelUtils;
 import com.sidpatchy.clairebot.Util.SantaUtils;
 import org.javacord.api.entity.channel.ServerTextChannel;
+import org.javacord.api.entity.channel.TextChannel;
 import org.javacord.api.entity.message.Message;
 import org.javacord.api.entity.message.MessageFlag;
 import org.javacord.api.entity.message.embed.Embed;
@@ -16,18 +20,29 @@ import org.javacord.api.entity.server.Server;
 import org.javacord.api.entity.user.User;
 import org.javacord.api.event.interaction.ModalSubmitEvent;
 import org.javacord.api.interaction.ModalInteraction;
+import org.javacord.api.interaction.callback.InteractionOriginalResponseUpdater;
 import org.javacord.api.listener.interaction.ModalSubmitListener;
 
+import java.util.HashMap;
+import java.util.concurrent.CompletableFuture;
+
 public class ModalSubmit implements ModalSubmitListener {
+
+    private LanguageManager languageManager;
 
     @Override
     public void onModalSubmit(ModalSubmitEvent event) {
         ModalInteraction modalInteraction = event.getModalInteraction();
 
+        Server server = modalInteraction.getServer().orElse(null);
+        TextChannel textchannel = modalInteraction.getChannel().orElse(null);
         User user = modalInteraction.getUser();
         String modalID = modalInteraction.getCustomId();
 
         Main.getLogger().debug(modalID);
+
+        ContextManager context = new ContextManager(server, textchannel, user, user, null, new HashMap<>());
+        languageManager = new LanguageManager(Main.getFallbackLocale(), context);
 
         String voteType = "";       // Allows the Poll/Request feature to distinguish between the two
 
@@ -56,7 +71,7 @@ public class ModalSubmit implements ModalSubmitListener {
             santaMessage = Main.getApi().getCachedMessageById(santaMessageID).orElse(null);
             assert santaMessage != null;
 
-            Embed embed = santaMessage.getEmbeds().get(0);
+            Embed embed = santaMessage.getEmbeds().getFirst();
             EmbedFooter footer = embed.getFooter().orElse(null);
 
             extractionResult = SantaUtils.extractDataFromEmbed(embed, footer);
@@ -77,7 +92,7 @@ public class ModalSubmit implements ModalSubmitListener {
                     Main.getLogger().debug(hexColour);
 
                     modalInteraction.createImmediateResponder()
-                        .addEmbed(UserPreferencesEmbed.getAcknowledgeAccentColourChange(user, hexColour))
+                        .addEmbed(UserPreferencesEmbed.getAcknowledgeAccentColourChange(languageManager, user, hexColour))
                         .setFlags(MessageFlag.EPHEMERAL)
                         .respond();
                 }
@@ -85,7 +100,6 @@ public class ModalSubmit implements ModalSubmitListener {
             case "request":
                 String question = modalInteraction.getTextInputValueByCustomId("question-modal").orElse("");
                 String description = modalInteraction.getTextInputValueByCustomId("details-modal").orElse("");
-                Server server = modalInteraction.getServer().orElse(null);
                 User author = modalInteraction.getUser();
 
                 if (server == null) {
@@ -94,30 +108,49 @@ public class ModalSubmit implements ModalSubmitListener {
 
                 if (voteType.equalsIgnoreCase("request")) {
                     ServerTextChannel requestsChannel = ChannelUtils.getRequestsChannel(server);
-                    modalInteraction.createImmediateResponder()
-                            .addEmbed(VotingEmbed.getUserResponse(author, requestsChannel.getMentionTag()))
-                            .setFlags(MessageFlag.EPHEMERAL)
-                            .respond();
+                    if (requestsChannel == null) {
+                        modalInteraction.createImmediateResponder()
+                                .addEmbed(ErrorEmbed.getCustomError(languageManager, Main.getErrorCode("requestsChannelMissing"), "A requests channel is not configured for this server. An admin can set one in /config server > Requests Channel."))
+                                .setFlags(MessageFlag.EPHEMERAL)
+                                .respond();
+                    } else {
+                        modalInteraction.createImmediateResponder()
+                                .addEmbed(VotingEmbed.getUserResponse(languageManager, author, requestsChannel.getMentionTag()))
+                                .setFlags(MessageFlag.EPHEMERAL)
+                                .respond();
 
-                    requestsChannel.sendMessage(VotingEmbed.getPoll(voteType, question, description, false, null, server, author, 0));
+                        requestsChannel.sendMessage(VotingEmbed.getPoll(languageManager, voteType, question, description, false, null, server, author, 0));
+                    }
                 }
                 else if (voteType.equalsIgnoreCase("poll")) {
                     modalInteraction.createImmediateResponder()
-                            .addEmbed(VotingEmbed.getPoll(voteType, question, description, false, null, server, author, 0))
+                            .addEmbed(VotingEmbed.getPoll(languageManager, voteType, question, description, false, null, server, author, 0))
                             .respond();
                 }
 
                 break;
             case "santa-rules", "santa-theme":
-                modalInteraction.createImmediateResponder().respond();
+                // Silently defer the modal response (no visible message), then update the existing host message in place
+                CompletableFuture<InteractionOriginalResponseUpdater> deferred = modalInteraction.respondLater();
+
+                assert extractionResult != null;
                 extractionResult.rules = modalInteraction.getTextInputValueByCustomId("rules-row").orElse(extractionResult.rules);
                 extractionResult.theme = modalInteraction.getTextInputValueByCustomId("theme-row").orElse(extractionResult.theme);
 
                 Role role = Main.getApi().getRoleById(extractionResult.santaID.get("roleID")).orElse(null);
                 assert role != null;
 
-                SantaEmbed.getHostMessage(role, user, extractionResult.rules, extractionResult.theme).send(user);
-                santaMessage.delete();
+                // Rebuild the host embed with the existing giver/receiver pairs and edit the original message
+                santaMessage.edit(SantaEmbed.buildHostEmbedFromPairs(languageManager, role, user, extractionResult.rules, extractionResult.theme, extractionResult.givers, extractionResult.receivers));
+                // Finalize and immediately delete the deferred response to avoid leaving a "Bot is thinking…" stub
+                deferred.thenAccept(interactionOriginalResponseUpdater -> {
+                    try {
+                        interactionOriginalResponseUpdater.setContent("\u200B").update().thenAccept(msg -> {
+                            try { msg.delete(); } catch (Exception ignored2) {}
+                        });
+                    } catch (Exception ignored) {}
+                });
+                break;
         }
     }
 }
